feat(cpp): support cross-file call detachment for heap reduction
Add CxxDetachedAstNode/CxxDetachedIssueReporter and wire them through
CxxDetectionEngine/CxxLanguageSupport/CxxSemantic, mirroring the Java
detachment path now that the engine types are language-generic.

CxxBaseDetectionRule also runs CxxSymbolResolverVisitor ahead of
detection in visitFile (it otherwise only populates on visit/leaveNode,
too late for this class's own traversal) and detaches recorded calls
in leaveFile so a finished file's AST can be garbage-collected.

Signed-off-by: Shubham Kumar <chmodshubham@gmail.com>